--- a/templates/index.html
+++ b/templates/index.html
@@ -83,12 +83,9 @@
 
 						</div>
 						<div style="text-align:center;" class="user-login">
-							{% if user.is_authenticated %}
-  							  <a href="{% url 'profile' %}" class="form-btn">Profile</a>
-   							 <a href="{% url 'logout' %}" class="form-btn">Logout</a>
-							{% else %}
-  							  <a  href="{% url 'login' %}" class="form-btn">Login</a>
-							{% endif %}
+							
+  							  <a  href="" class="form-btn">Login</a>
+							
 
 						</div>
 				</div>
