--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 						</div>
 						<div style="text-align:center;" class="user-login">
 							
-  							  <a  href="" class="form-btn">Login</a>
+  							  <a  href="{% url 'login' %}" class="form-btn">Login</a>
 							
 
 						</div>
