Database fixed. All attributes added

--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -382,12 +382,12 @@
 					
 					<div class="input-box">
 						<label for="">Email</label>				
-						<input class="email" type="email" placeholder="Email">
+						<input class="email" type="email" placeholder="Email" value="{{ user.email }}">
 						<button><ion-icon name="create-outline"></ion-icon></button>
 					</div>
 					<div class="input-box">
 						<label for="">Address</label>				
-						<input class="address" type="address" placeholder="Address">
+						<input class="address" type="address" placeholder="Address" value="{{ user.address }}">
 						<button><ion-icon name="create-outline"></ion-icon></button>
 					</div>
 					<button type="submit"><a href="user-profile.html" style="color: white;">Save</a></button>
