--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -347,51 +347,52 @@
 			<!-- <h1>{{ user }}</h1> -->
 		<div class="container">
 			<div class="container">
-				<form action="#" class="registration-form row active">
-					<div class="input-box col-sm-6">
-						<label for="">First Name</label>
-						<input class="firstname" type="text" placeholder="First Name" value="{{ user.first_name }}">
-						<button><ion-icon name="create-outline"></ion-icon></button>
-					</div>
-					<div class="input-box col-sm-6">
-						<label for="">Last Name</label>
-						<input class="lastname" type="text" placeholder="Last Name" value="{{ user.last_name }}">
-						<button><ion-icon name="create-outline"></ion-icon></button>
-					</div>
-					<div class="input-box col-sm-6">
-						<label for="">Phone</label>
-						<input class="phone" type="phone" placeholder="Phone Number" value="{{ user.phone_number }}" >
-						<button><ion-icon name="create-outline"></ion-icon></button>
-					</div>
-					<div class="input-box col-sm-6">
-						<label for="">Birth Date</label>				
-						<input class="birthdate" type="date" placeholder="Birth Date" value="{{ user.dob }}">
-						<button><ion-icon name="create-outline"></ion-icon></button>
-					</div>
-					<div class="gender input-box">
-						<label for="">Gender</label>
-						<div class="label1">                
-							<input type="radio" class="gendermale" name="gender" value="Male" {% if user.gender == 'M' %} checked {% endif %} >
-							<label for="">Male</label>
-						</div>
-						<div class="label2">
-							<input type="radio" class="genderfemale" name="gender" value="Female" {% if user.gender == 'F' %} checked {% endif %}>
-							<label for="">Female</label>
-						</div>
-					</div>
-					
-					<div class="input-box">
-						<label for="">Email</label>				
-						<input class="email" type="email" placeholder="Email" value="{{ user.email }}">
-						<button><ion-icon name="create-outline"></ion-icon></button>
-					</div>
-					<div class="input-box">
-						<label for="">Address</label>				
-						<input class="address" type="address" placeholder="Address" value="{{ user.address }}">
-						<button><ion-icon name="create-outline"></ion-icon></button>
-					</div>
-					<button type="submit"><a href="user-profile.html" style="color: white;">Save</a></button>
-				</form>
+				<form action="{% url 'update_profile' %}" method="post" class="registration-form row active">
+                    {% csrf_token %}
+                    <div class="input-box col-sm-6">
+                        <label for="">First Name</label>
+                        <input class="firstname" type="text" name="first_name" placeholder="First Name" value="{{ user.first_name }}">
+                        <button><ion-icon name="create-outline"></ion-icon></button>
+                    </div>
+                    <div class="input-box col-sm-6">
+                        <label for="">Last Name</label>
+                        <input class="lastname" type="text" name="last_name" placeholder="Last Name" value="{{ user.last_name }}">
+                        <button><ion-icon name="create-outline"></ion-icon></button>
+                    </div>
+                    <div class="input-box col-sm-6">
+                        <label for="">Phone</label>
+                        <input class="phone" type="phone" name="phone_number" placeholder="Phone Number" value="{{ user.phone_number }}">
+                        <button><ion-icon name="create-outline"></ion-icon></button>
+                    </div>
+                    <div class="input-box col-sm-6">
+                        <label for="">Birth Date</label>				
+                        <input class="birthdate" type="date" name="dob" placeholder="Birth Date" value="{{ user.dob }}">
+                        <button><ion-icon name="create-outline"></ion-icon></button>
+                    </div>
+                    <div class="gender input-box">
+                        <label for="">Gender</label>
+                        <div class="label1">                
+                            <input type="radio" class="gendermale" name="gender" value="M" {% if user.gender == 'M' %} checked {% endif %}>
+                            <label for="">Male</label>
+                        </div>
+                        <div class="label2">
+                            <input type="radio" class="genderfemale" name="gender" value="F" {% if user.gender == 'F' %} checked {% endif %}>
+                            <label for="">Female</label>
+                        </div>
+                    </div>
+                    <div class="input-box">
+                        <label for="">Email</label>				
+                        <input class="email" type="email" name="email" placeholder="Email" value="{{ user.email }}">
+                        <button><ion-icon name="create-outline"></ion-icon></button>
+                    </div>
+                    <div class="input-box">
+                        <label for="">Address</label>				
+                        <input class="address" type="text" name="address" placeholder="Address" value="{{ user.address }}">
+                        <button><ion-icon name="create-outline"></ion-icon></button>
+                    </div>
+                    <button type="submit">Update Profile</button>
+                </form>
+                
 			</div><div class="prescriptions" id="prescriptions">
 			<div class="presc-box">
 				<img src="assets/images/prescription.jpg" alt="prescription-image">
