--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-{% load static %}
+{%load static%}
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>medE</title>
 	<link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'product_day.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-	<header>
+    <header>
 		<div class="header-main" data-header>
 			<div class="container">
 				<a class="header-logo" href="{%url 'home'%}">
-					<img src="{% static 'Logo.jpg' %}" alt=" medX logo"height="50px"width="80px">
+					<img src="{% static 'Logo.jpg' %}" alt=" medX logo" height="50px"width="80px">
 				</a>
 				<div class="header-search-container">
 					
@@ -48,53 +51,59 @@
 					<button id="select-image" class="action-btn">
 						<img src="{%static 'prescription.png'%}" alt="prescription-upload-icon" width="30">
 					</button>
-					<button id="user-login-btn" class="action-btn" >
+					<button id="user-login-btn" class="action-btn">
 						<ion-icon name="person-outline"></ion-icon>
 					</button>
-							<button id="cart-btn" class="action-btn" >
-								<ion-icon name="bag-outline"></ion-icon>
-								<span class="btn-badge">3</span>
+					<button id="cart-btn" class="action-btn">
+						<ion-icon name="bag-outline"></ion-icon>
+						<span class="btn-badge">3</span>
+					</button>
+					<div class="shopping-cart">
+						<div class="cartbox">
+							<button class="cart-trash">
+								<ion-icon name="trash"></ion-icon>
 							</button>
-								<div>
-									
-						<div class="shopping-cart" >
-								<!-- HTML template for a product cartbox -->
-								<div id= "cart-container">
-									<!-- <div class="cartbox" id="cartbox-${p_id}">
-									  <button class="cart-trash">
-										<ion-icon name="trash"></ion-icon>
-									  </button>
-									  <img src="" alt="">
-									  <div class="cart-content">
-										<h3 id="productName-${p_id}"></h3>
-										<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
-										  <span class="cart-content-price" id="productPrice-${p_id}"></span>
-										  <span class="quantity"></span><br>
-										  <span class="quantity">Days: 7</span>
-										</div>
-									  </div>
-									</div> -->
-								  </div>
-								  
-							<div class="total">Total: ৳1460.00</div>
+							<img src="assets/products/napa.jpg" alt="napa">
+							<div class="cart-content">
+								<h3>Napa</h3>
+								<span class="cart-content-price">৳610.00</span>
+								<span class="quantity">qty: 1</span>
+							</div>
+						</div>
+						<div class="cartbox">
+							<button class="cart-trash">
+								<ion-icon name="trash"></ion-icon>
+							</button>
+							<img src="assets/products/napa.jpg" alt="napa">
+							<div class="cart-content">
+								<h3>{% product_details.p_name% }</h3>
+								<span class="cart-content-price">৳610.00</span>
+								<span class="quantity">qty: 1</span>
+							</div>
+						</div>
+						<div class="cartbox">
+							<button class="cart-trash">
+								<ion-icon name="trash"></ion-icon>
+							</button>
+							<img src="assets/products/napa.jpg" alt="napa">
+							<div class="cart-content">
+								<h3>Napa</h3>
+								<span class="cart-content-price">৳610.00</span>
+								<span class="quantity">qty: 1</span>
+							</div>
+						</div>
+						<div class="total">Total: ৳1830.00</div>
 						<a href="#" class="cart-checkout-btn">Checkout</a>
+					</div>
+					<form action="#" class="user-login">
+						<input type="email" placeholder="Email" class="login-box">
+						<input type="password" placeholder="Password" class="login-box">
+						<div class="forgotreg">
+							<a href="#">Forgot password?</a>
+							<a href="register.html">Register now!</a>
 						</div>
-
-
-						</div>
-						<div style="text-align:center;" class="user-login">
-							{% if user.is_authenticated %}
-							<a href="{% url 'profile' %}" class="form-btn">Profile</a>
-							<a href="{% url 'mylogout' %}" class="form-btn">Logout</a>
-						    {% else %}
-							<a href="{% url 'mylogin' %}" class="form-btn">Login</a>
-						    {% endif %}
-						
-
-					
-							
-
-						</div>
+						<input type="submit" value="Login" class="form-btn">
+					</form>
 				</div>
 			</div>
 		</div>
@@ -109,7 +118,7 @@
 						<div class="dropdown-panel">
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-								
+									
 								</li>
 								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">Cold & Allergies</a></li>
 								<li class="panel-list-item"><a href="{%url 'category' p_category='Heart Problems'%}">Heart Problems</a></li>
@@ -171,19 +180,6 @@
 				</ul>
 			</div>
 		</nav>
-		<!-- __________________________ -->
-		<!-- <div class="mobile-bottom-navigation">
-			<button class="action-btn" data-mobile-menu-open-btn>
-				<ion-icon name="menu"></ion-icon>
-			</button>
-			<button class="action-btn">
-				<ion-icon name="bag"></ion-icon>
-			</button>                                               
-			<button class="action-btn">
-				<ion-icon class="person"></ion-icon>
-			</button>
-		</div> -->
-		<!-- ________________________ -->
 		<nav class="mobile-navigation-menu has-scrollbar" data-mobile-menu>
 			<div class="menu-top">
 				<h2 class="menu-title">Menu</h2>
@@ -194,7 +190,7 @@
 			</div>
 			<ul class="mobile-menu-category-list">
 				<li class="menu-category">
-					<a href="{%url 'home'%}" class="menu-title">Home</a>
+					<a href="" class="menu-title">Home</a>
 				</li>
 				<li class="menu-category">
 					<button class="accordion-menu" data-accordion-btn>
@@ -264,114 +260,6 @@
 		</nav> 
 	</header>
 	<main>
-		<!-- --------------
-			BANNER
-		-------------- -->
-		<div class="banner">
-			<div class="container">
-				<div class="slider-container">
-					<!-- ------------------------- -->
-
-						<!-- <div class="slide first"><img src="assets/images/banner-1.jpg" alt="banner1"></div>
-						<div class="slide"><img src="assets/images/banner-2.jpg" alt="banner2"></div>
-						<div class="slide"><img src="assets/images/banner-3.jpg" alt="banner3"></div> -->
-
-					<!-- ------------------------- -->
-					<input type="radio" name="radio-btn" id="radio1">
-					<input type="radio" name="radio-btn" id="radio2">
-					<input type="radio" name="radio-btn" id="radio3">
-					<input type="radio" name="radio-btn" id="radio4">
-					<input type="radio" name="radio-btn" id="radio5">
-
-					<div class="slider-item first">
-						<img class="banner-img" src="{%static 'images/banner-5.png' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-1</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					<div class="slider-item">
-						<img class="banner-img" src="{%static 'images/banner-2.jpg' %}" alt="banner-1">
-						<div class="banner-content first">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-2</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					<div class="slider-item">
-						<img class="banner-img" src="{%static 'images/banner-3.jpg' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-3</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					<div class="slider-item">
-						<img class="banner-img" src="{%static 'images/banner-4.jpg' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-4</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					<div class="slider-item">
-						<img class="banner-img" src="{%static 'images/banner-5.png' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-5</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					
-					<div class="navigation-auto">
-						<div class="auto-btn1"></div>
-						<div class="auto-btn2"></div>
-						<div class="auto-btn3"></div>
-						<div class="auto-btn4"></div>
-						<div class="auto-btn5"></div>
-					</div>
-
-					<div class="navigation-manual">
-						<label for="radio1" class="manual-btn"></label>
-						<label for="radio2" class="manual-btn"></label>
-						<label for="radio3" class="manual-btn"></label>
-						<label for="radio4" class="manual-btn"></label>
-						<label for="radio5" class="manual-btn"></label>
-					</div>
-				</div>
-
-			</div>
-		</div>
-		<!-- --------------
-			UPLOAD PRESCRIPTION
-		-------------- -->
-		<div class="prescription" id="select-image2">
-			<div class="container">
-				<input type="file" id="file-upload" accept="image/*">
-				<label id="select-image" for="file-upload">Upload Prescription</label>
-			</div>
-		</div>
 		<div class="backdrop"></div>
 		<div class="img-area" id="img-area">
 			<div class="elem-container active" data-img="">
@@ -396,160 +284,55 @@
 				</div>
 			</div>
 		</div>
-		<!-- --------------
-			CATEGORY
-		-------------- -->
-		<div class="category">
-			<div class="container">
-				<div class="category-item-container">
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/syringe.png' %}" alt="syringe-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Medicines</h3>
-								<p class="category-item-amount">(168)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/dental.png' %}" alt="dental-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Dental Care</h3>
-								<p class="category-item-amount">(61)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/woman.png' %}" alt="woman-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Women's Choice</h3>
-								<p class="category-item-amount">(69)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/contraceptive.png' %}" alt="contraceptive-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Sexual Care</h3>
-								<p class="category-item-amount">(38)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/baby.png' %}" alt="baby-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Baby Care</h3>
-								<p class="category-item-amount">(124)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/diabetic.png' %}" alt="diabetic-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Diabetics Care</h3>
-								<p class="category-item-amount">(57)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="backdrop"></div>
-		<div class="img-area" id="img-area">
-			<div class="elem-container active" data-img="">
-					<input type="file" id="file-upload" accept="image/*" hidden>
-					<div class="times">
-						<input type="checkbox" name="Morning" value="Morning">
-						<label for="Morning">Morning</label>
-						<input type="checkbox" name="Afternoon" value="Afternoon">
-						<label for="Afternoon">Afternoon</label>
-						<input type="checkbox" name="Night" value="Night">
-						<label for="Night">Night</label>
-					</div>
-					<div class="days">
-						<input type="checkbox" name="7Days" value="7Days">
-						<label for="7Days">7 Days</label>
-						<input type="checkbox" name="15Days" value="15Days">
-						<label for="15Days">15 Days</label>
-						<input type="checkbox" name="1Month" value="1Month">
-						<label for="1Month">1 Month</label>
-					</div>
-					<button class="prescription-upload-btn" type="submit">Upload</button>
-				</div>
-			</div>
-		</div>
-		<!-- --------------
-			PRODUCTS
-		-------------- -->
-	
 		<div class="container">
-			<div class="product-main">
-				<h2 class="title">Featured Products</h2>
-				<div class="product-grid">
-					
-					{% for product in products %}
-					<div class="showcase">
-						<div class="showcase-banner">
-							<a href="{%url 'prod' p_name=product.p_name %}">
-								<img  class="product-img default" src="media/{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
-								<img  class="product-img hover" src="media/{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
-							</a>
-							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
-							
+			<div class="product-details row">
+                <div class="col-sm-6">
+                    <img class="product-img default" src="{{ product_details.p_image.url }}" alt="{{ product_details.p_name }}" width="600">
+                </div>
+                <div class="col-sm-6">
+                    <p>Home / {{ product_details.p_name }}</p>
+                    <h1>{{ product_details.p_name }}</h1>
+                    <h2>{{ product_details.p_type }}</h2>
+                    <h3>Generics: {{ product_details.p_generics }}</h3>
+                    <a href=""><h3>{{ product_details.p_company }}</h3></a>
+                    <div class="price-box">
+                        <p class="price">৳{{ product_details.discounted_price|floatformat:"2"}}</p>
+                        <del>৳{{ product_details.p_price|floatformat:"2" }}</del>
+                    </div>
 
-							<div  class="showcase-actions" >
-								<button id = "{{ product.p_id }}" class="btn-action" onclick="ClearCart()">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button id = "{{ product.p_id }} " class="btn-action" onclick="AddtoCart('{{product.p_id}}')"> <!--Cart button-->
-								
-								</button> 
-							</div>
-						</div>
-			
-						<div class="showcase-content">
-							<a href="{%url 'prod' p_name=product.p_name %}" class="showcase-category">{{ product.p_name }}</a>
 
-							<a href="{%url 'prod' p_name=product.p_name %}">
-								<h3 class="showcase-title">{{ product.p_category }}</h3>
-							</a>
-							
-							<div class="price-box">
-						
-                             <p class="price">৳{{ product.discounted_price|floatformat:"2"}}</p>
- 
-								<del>{{ product.p_price|floatformat:"2" }}</del>
-							</div>
-						</div>
-					
-					</div>
-					{%endfor%}
+				<div class="times">
+					<input type="checkbox" name="Morning" value="Morning">
+					<label for="Morning">Morning</label>
+					<input type="checkbox" name="Day" value="Day">
+					<label for="Day">Day</label>
+					<input type="checkbox" name="Night" value="Night">
+					<label for="Night">Night</label>
 				</div>
-			</div>
-
+            </div>
+            <section class="product-medications">
+                <h2>Indications</h2>
+                <p>{{ product_details.p_Indications }}</p>
+                <h2>Pharmacology</h2>
+                <p>{{ product_details.p_Pharmacology }}</p>
+                <h2>Dosage & Administration</h2>
+               <p>{{ product_details.p_Dosage }}</p>
+                    <h2>Interaction</h2>
+                    <p>{{ product_details.p_Interaction }}</p>
+                    <h2>Contradictions</h2>
+                    <p>{{ product_details.p_Contradictions }}</p>
+                    <h2>Side Effects</h2>
+                    <p>{{ product_details.p_Side_Effects }}</p>
+                    <h2>Pregnancy and Lactation</h2>
+                    <p>{{ product_details.p_Pregnancy }}</p>
+                    <h2>Precautions and Warnings</h2>
+                    <p>{{ product_details.p_Precautions}}</p>
+                    <h2>Therapeutic Class</h2>
+                    <p>{{ product_details.p_Therapeutic}}</p>
+                    <h2>Storage Conditions</h2>
+                    <p>{{ product_details.p_Storage}}</p>
+            </section>
+		</div>
 	</main>
 
 	<footer class="footer">
@@ -642,12 +425,16 @@
 	<a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
 		<ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
 	</a>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-	<script type="text/javascript" src="{% static 'script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script.js' %}"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="{% static 'search.js' %}"></script>
-	<script src="{% static 'cart.js' %}"></script>
+	<script>
+        const plus = document.querySelector(".plus"),
+        minus = document.querySelector(".minus"),
+        num = document.querySelector(".num");
+
+    let a = 1;
+ 
+    </script>
 </body>
-</html>
+</html> 
