--- a/templates/product.html
+++ b/templates/product.html
@@ -306,7 +306,24 @@
                     </div>
 					<div class="buttons row">
 						<button class="addtocart col-sm-5">Add to Cart</button>
-						<button class="buynow col-sm-5">Buy now</button>
+						<button class="buynow col-sm-5" id="addToCartBtn">Add To List</button>
+
+							<div class="popup" id="myModal">
+							<div class="popup-content">
+								<span class="close">&times;</span>
+								<h2>Select Medication Details</h2>
+								<label for="time">Select Time:</label>
+								<select id="time">
+								<option value="morning">Morning</option>
+								<option value="day">Day</option>
+								<option value="night">Night</option>
+								</select>
+								<label for="duration">Number of Days:</label>
+								<input type="number" id="duration" placeholder="Enter number of days">
+								<button id="confirmBtn">Confirm</button>
+							</div>
+							</div>
+
 					</div>
                 </div>
                 
@@ -435,7 +452,37 @@
         num = document.querySelector(".num");
 
     let a = 1;
- 
+	
+	// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById('addToCartBtn');
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName('close')[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = 'block';
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = 'none';
+}
+
+// When the user clicks Confirm, close the modal
+var confirmBtn = document.getElementById('confirmBtn');
+confirmBtn.onclick = function() {
+    var selectedTime = document.getElementById('time').value;
+    var duration = document.getElementById('duration').value;
+    // Do something with selectedTime and duration, for example, send them to the server
+    modal.style.display = 'none';
+}
+
+
+
     </script>
 </body>
 </html> 
