--- a/templates/product.html
+++ b/templates/product.html
@@ -58,43 +58,30 @@
 						<ion-icon name="bag-outline"></ion-icon>
 						<span class="btn-badge">3</span>
 					</button>
-					<div class="shopping-cart">
-						<div class="cartbox">
-							<button class="cart-trash">
+					
+					<div class="shopping-cart" >
+						<!-- HTML template for a product cartbox -->
+						<div id= "cart-container">
+							<!-- <div class="cartbox" id="cartbox-${p_id}">
+							  <button class="cart-trash">
 								<ion-icon name="trash"></ion-icon>
-							</button>
-							<img src="assets/products/napa.jpg" alt="napa">
-							<div class="cart-content">
-								<h3>Napa</h3>
-								<span class="cart-content-price">৳610.00</span>
-								<span class="quantity">qty: 1</span>
-							</div>
-						</div>
-						<div class="cartbox">
-							<button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							</button>
-							<img src="assets/products/napa.jpg" alt="napa">
-							<div class="cart-content">
-								<h3>{% product_details.p_name% }</h3>
-								<span class="cart-content-price">৳610.00</span>
-								<span class="quantity">qty: 1</span>
-							</div>
-						</div>
-						<div class="cartbox">
-							<button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							</button>
-							<img src="assets/products/napa.jpg" alt="napa">
-							<div class="cart-content">
-								<h3>Napa</h3>
-								<span class="cart-content-price">৳610.00</span>
-								<span class="quantity">qty: 1</span>
-							</div>
-						</div>
-						<div class="total">Total: ৳1830.00</div>
-						<a href="#" class="cart-checkout-btn">Checkout</a>
+							  </button>
+							  <img src="" alt="">
+							  <div class="cart-content">
+								<h3 id="productName-${p_id}"></h3>
+								<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
+								  <span class="cart-content-price" id="productPrice-${p_id}"></span>
+								  <span class="quantity"></span><br>
+								  <span class="quantity">Days: 7</span>
+								</div>
+							  </div>
+							</div> -->
+						  </div>
+						  
+						<div class="total">Total: ৳1460.00</div>
+					<a href="#" class="cart-checkout-btn">Checkout</a>
 					</div>
+
 					<div style="text-align:center;" class="user-login">
 						{% if user.is_authenticated %}
 						<a href="{% url 'profile' %}" class="form-btn">Profile</a>
