--- a/static/product_day.css
+++ b/static/product_day.css
@@ -721,7 +721,33 @@ main .container {
 .times label {
 	font-size: 20px;
 }
+.product-details .quantity {
+	display: flex;
+    width: 60%;
+	margin-bottom: 15px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
 
+.product-details .quantity span {
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+.product-details .quantity span:nth-child(1) {
+    border-bottom-left-radius: 12px;
+    border-top-left-radius: 12px;
+}
+.product-details .quantity span:nth-child(3) {
+    border-bottom-right-radius: 12px;
+    border-top-right-radius: 12px;
+}
 
 .product-details .quantity span:hover {
     background-color: rgba(0, 0, 0, 0.1);
