--- a/static/product_day.css
+++ b/static/product_day.css
@@ -750,7 +750,8 @@ main .container {
 	border-radius: 10px;
 	transition: 0.2s ease;
 }
-.product-details .buynow {
+.product-details .addtolist {
+	position: relative;
 	background-color: var(--red);
 	font-size: 1.2rem;
 	padding: 20px 0;
@@ -759,7 +760,10 @@ main .container {
 	border-radius: 10px;
 	transition: 0.2s ease;
 }
-
+.product-details .addtolistddown {
+	position: absolute;
+	left: 0;
+}
 .product-details .addtocart:hover,
 .product-details .buynow:hover {
 	filter: brightness(90%);
