--- a/static/product_day.css
+++ b/static/product_day.css
@@ -750,8 +750,7 @@ main .container {
 	border-radius: 10px;
 	transition: 0.2s ease;
 }
-.product-details .addtolist {
-	position: relative;
+.product-details .buynow {
 	background-color: var(--red);
 	font-size: 1.2rem;
 	padding: 20px 0;
@@ -760,10 +759,7 @@ main .container {
 	border-radius: 10px;
 	transition: 0.2s ease;
 }
-.product-details .addtolistddown {
-	position: absolute;
-	left: 0;
-}
+
 .product-details .addtocart:hover,
 .product-details .buynow:hover {
 	filter: brightness(90%);
