--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -301,14 +301,22 @@
                     </div>
 					<div class="buttons row">
 						<button class="addtocart col-sm-5">Add to Cart</button>
-						<button class="addtolist col-sm-5">Add To List</button>
+						<button id="addtolist" class="addtolist col-sm-5">Add To List</button>
 						<div class="addtolistddown">
-							<input type="radio">
-							<label for="">Morning</label>
-							<input type="radio">
-							<label for="">Day</label>
-							<input type="radio">
-							<label for="">Night</label>
+							<div>
+								<input type="checkbox" name="Morning" value="Morning">
+								<label for="Morning">Morning</label>
+							</div>
+							<div>
+								<input type="checkbox" name="Day" value="Day">
+								<label for="Day">Day</label>
+
+							</div>
+							<div>
+								<input type="checkbox" name="Night" value="Night">
+								<label for="Night">Night</label>
+
+							</div>
 						</div>
 					</div>
                 </div>
