--- a/templates/product.html
+++ b/templates/product.html
@@ -82,7 +82,7 @@
 							</div> -->
 						  </div>
 						  
-						<div class="total">Total: ৳1460.00</div>
+						<div class="total"></div>
 					<a href="#" class="cart-checkout-btn">Checkout</a>
 					</div>
 
@@ -507,6 +507,6 @@ confirmBtn.onclick = function() {
 
 
     </script>
-<script src="{% static 'cart.js' %}"></script>
+	<script src="{% static 'cart.js' %}"></script>
 </body>
 </html> 
