--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,12 @@
 								  </div>
 								  
 								  <div class="total"></div>
-						<a href="#" class="cart-checkout-btn">Checkout</a>
+								  {% if user.is_authenticated %}
+								<a href="" class="cart-checkout-btn" id="checkout-button">Checkout</a>
+						    {% else %}
+							<a href="{% url 'mylogin' %}" class="cart-checkout-btn" id="">Checkout</a>
+						    {% endif %}
+					
 						</div>
 
 						<div style="text-align:center;" class="user-login">
