--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 								  
 								  <div class="total"></div>
 								  {% if user.is_authenticated %}
-								<a href="" class="cart-checkout-btn" id="checkout-button">Checkout</a>
+								<a  class="cart-checkout-btn" id="checkout-button">Checkout</a>
 						    {% else %}
 							<a href="{% url 'mylogin' %}" class="cart-checkout-btn" id="">Checkout</a>
 						    {% endif %}
