--- a/templates/order_confirm.html
+++ b/templates/order_confirm.html
@@ -48,8 +48,8 @@
     <div class="receipt">
       <!-- Receipt Content Here -->
       <h2>Receipt</h2>
-      <p>ggg</p>
-      <p>Total: $[Total amount here]</p>
+      <p>{{output}}</p>
+    
     </div>
     <input type="text" class="address-input" placeholder="Enter Address">
     <button class="confirm-button">Confirm</button>
